--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "example": "examples"
   },
   "scripts": {
+    "docker:build": "sudo docker build -t receipt-processor-challenge .",
+    "docker:run": "sudo docker run -p 3000:3000 -d --name rpc_d receipt-processor-challenge",
+    "docker:stop": "sudo docker stop rpc_d",
+    "docker:remove": "sudo docker rm rpc_d",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
