--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "outDir": "./build",
         "rootDir": "./src",
         "strict": true,
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "sourceMap": true
     }
 }
